Package: future.BatchJobs
=========================

Version: 0.16.1-9000 [2019-01-04]

 * ...
 

Version: 0.16.1 [2019-01-03]

FIXES:

 * Made internal code agile to upcoming changes in the future package on
   how a captured error is represented.

BUG FIXES:

 * resolve() on a lazy batchtools future would stall and never return.


Version: 0.16.0 [2018-07-09]

NEW FEATURES:

 * The batchjobs_* backends support the handling of the standard output
   as implemented in future (>= 1.9.0).

FIXES:

 * Since the BatchJobs package is no longer maintained it is has not been
   updated according to the new API of the DBI package. This caused several
   warnings to be produced when using BatchJobs futures.  These warnings
   are now suppressed (to avoid all the noise from these warnings).

SOFTWARE QUALITY:

 * Removed internal workaround for BatchJobs (< 1.7).

CODE REFACTORING:

 * Preparing for futures to gather a richer set of results from BatchJobs
   backends.

DEPRECATED AND DEFUNCT:

 * Removed defunct and hidden argument 'args' to BatchJobsFuture.


Version: 0.15.0 [2017-09-10]

NEW FEATURES:

 * The error message for expired BatchJobs futures now include the last few
   lines of the logged output, which sometimes includes clues on why the future
   expired.  For instance, if a TORQUE / PBS job use more than the allocated
   amount of memory it might be terminated by the scheduler leaving the message
   "PBS: job killed: vmem 1234000 exceeded limit 1048576" in the output.

 * print() for BatchtoolsFuture returns the object invisibly.

BUG FIXES:

 * Calling future_lapply() with functions containing globals part of non-default
   packages would when using batchtools futures give an error complaining that
   the global is missing. This was due to updates in future (>= 1.4.0) that
   broke this package.

 * loggedOutput() for BatchtoolsFuture would always return NULL unless an error
   had occured.

DEPRECATED AND DEFUNCT:
